--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>React Time</title>
-</head>
-<body>
-  <div id="app"></div>
-  <script src="main.bundle.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Ubuntu:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title>Weathrly</title>
+  </head>
+
+  <body>
+    <div id="app"></div>
+    <script src="main.bundle.js"></script>
+  </body>
 </html>
